# corecpp2022-ib-coroutine

./: .gitignore  README.md
CodeExmples/: .clang-format  .clang-tidy  CMakeLists.txt  conan.cmake  conanfile.txt  getFile.py
CodeExmples/SendFileBlocking/: CMakeLists.txt
CodeExmples/SendFileBlocking/src/: FileSender.cpp  FileSender.hpp  main.cpp
CodeExmples/SendFileCallback/: CMakeLists.txt
CodeExmples/SendFileCallback/src/: FileSender.cpp  FileSender.hpp  main.cpp
CodeExmples/SendFileCoroutine/: CMakeLists.txt
CodeExmples/SendFileCoroutine/src/: FileSender.cpp  FileSender.hpp  main.cpp
CodeExmples/emptyCoro/: CMakeLists.txt  emptyCoroDemo.cpp
CodeExmples/emptyCoroFixed/: CMakeLists.txt  emptyCoro.cpp
CodeExmples/emptyCoroLeak/: CMakeLists.txt  emptyCoro.cpp
